# xiaoai

./: Cargo.toml  LICENSE  README.md  config.yaml
src/: config.rs  main.rs  recognize_result.rs
