[package]
name = "xiaoai"
version = "0.1.0"
edition = "2021"

[dependencies]
jsonpath_lib = "0.3.0"
regex = "1.8.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9.21"
strfmt = "0.2.4"
wol-rs = "1.0.0"
tokio = { version = "1", features = ["full"] }
warp = "0.3"
